--- a/grouphug.html
+++ b/grouphug.html
@@ -18,8 +18,12 @@
   <p>
   <a href="{{pathFor route="root"}}">GroupHug</a> -
   <a href="{{pathFor route="page"}}">Page List</a> -
+  {{#if currentUser}}
+  <a href="#" class="logout">Logout</a>
+  {{else}}
   <a href="{{pathFor route="register"}}">Register</a> -
   <a href="{{pathFor route="login"}}">Login</a>
+  {{/if}}
   </p>
 </template>
 
@@ -38,6 +42,11 @@
 
 <template name="login">
   <h2>Login</h2>
+  <form class="login">
+      <p>Email: <input type="email" name="email" required></p>
+      <p>Password: <input type="password" name="password" required></p>
+      <p><input type="submit" value="Login"></p>
+  </form>
 </template>
 
 <template name="addPage">
@@ -57,8 +66,10 @@
     {{#each page}}
       <li><a href="/page/{{name}}">{{name}}</a></li>
     {{/each}}
-  </ul>     
-  {{> addPage}}
+  </ul>
+  {{#if currentUser}}     
+    {{> addPage}}
+  {{/if}}
 </template>
 
 <template name="showPage">
