--- a/grouphug.html
+++ b/grouphug.html
@@ -18,12 +18,7 @@
   <p>
   <a href="{{pathFor route="root"}}">GroupHug</a> -
   <a href="{{pathFor route="page"}}">Page List</a> -
-  {{#if currentUser}}
-  <a href="#" class="logout">Logout</a>
-  {{else}}
-  <a href="{{pathFor route="register"}}">Register</a> -
-  <a href="{{pathFor route="login"}}">Login</a>
-  {{/if}}
+  {{> loginButtons}}
   </p>
 </template>
 
