Make names consistent

--- a/client/grouphug.html
+++ b/client/grouphug.html
@@ -96,7 +96,7 @@
   </p>
 </template>
 
-<template name="showRoom">
+<template name="roomShow">
   {{> actions}}
   <h2>{{name}}</h2>
   {{#unless isLatest }}
@@ -106,7 +106,7 @@
   {{> chat}}
 </template>
 
-<template name="showRoomMeta">
+<template name="roomMetaShow">
   {{> actions}}
   <h2>{{name}}</h2>
   <code>
